New progress bar stops working properly when moving mouse over it #47256

Closed
opened 2016-01-27 18:51:21 +01:00 by Anton Lorenzen · 15 comments
Member

System Information
Fedora 22 == x86_64 Linux 4.2.8-200.fc22.x86_64

Blender Version
latest build: 17735ec

Short description of error
The layer visualizing the progress stops moving,
when the mouse is over the progress bar

Exact steps for others to reproduce the error
Render a more or less complex scene
and move your mouse over the progress bar.
While the percentage is slowly approaching 100,
the layer behind stops moving. As soon as the mouse leaves,
the layer jumps to the right location instantly.

See: Screenshot from 2016-01-27 18-46-50.png
//The mouse pointer was over the progress bar,
sorry, I could not make the program display it.//

**System Information** Fedora 22 == x86_64 Linux 4.2.8-200.fc22.x86_64 **Blender Version** latest build: 17735ec **Short description of error** The layer visualizing the progress stops moving, when the mouse is over the progress bar **Exact steps for others to reproduce the error** Render a more or less complex scene and move your mouse over the progress bar. While the percentage is slowly approaching 100, the layer behind stops moving. As soon as the mouse leaves, the layer jumps to the right location instantly. **See:** ![Screenshot from 2016-01-27 18-46-50.png](https://archive.blender.org/developer/F277539/Screenshot_from_2016-01-27_18-46-50.png) //The mouse pointer was over the progress bar, sorry, I could not make the program display it.//
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @anfelor

Added subscriber: @anfelor

Added subscriber: @VukGardasevic

Added subscriber: @VukGardasevic

I can confirm the issue on Win 7 with build 499bde8 (on CPU).

Seems that is just exposing an old issue related to it. The render progress bar doesn't update on 2.67b too (tested also on Windows).

I can confirm the issue on Win 7 with build 499bde8 (on CPU). Seems that is just exposing an old issue related to it. The render progress bar doesn't update on **2.67b** too (tested also on Windows).
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

The same is true for the tool tip, It never updates.

The same is true for the tool tip, It never updates.

Added subscribers: @JulianEisel, @Sergey

Added subscribers: @JulianEisel, @Sergey

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sergey Sharybin self-assigned this 2016-01-28 12:34:02 +01:00

This isn't specific to the new progress bar, it's how it always used to be. Surely improvements are possible, but those are not the bugs. So thanks for the report, but closing it now.

Maybe @JulianEisel likes to put this on radars tho, so he can look into.

This isn't specific to the new progress bar, it's how it always used to be. Surely improvements are possible, but those are not the bugs. So thanks for the report, but closing it now. Maybe @JulianEisel likes to put this on radars tho, so he can look into.
Member

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'
Member

Am tempted to look into this at some point soon, so will reopen as todo.

Am tempted to look into this at some point soon, so will reopen as todo.
Sergey Sharybin was unassigned by Julian Eisel 2016-01-29 02:13:40 +01:00
Julian Eisel self-assigned this 2016-01-29 02:13:40 +01:00

This issue was referenced by 3822a9c01a

This issue was referenced by 3822a9c01aaa70d119b67f7a86a0a17d25eabc93

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Committed related change so tooltip updates too: 3b92a9472c

Committed related change so tooltip updates too: 3b92a9472c
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47256
No description provided.