Fix T47256: Progress bar doesn't update w/ mouse-over